# min2phase-rust

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  OPTIMIZATION_NOTES.md  README.md  REPORT.md
benches/: solve.rs
crates/m2p-cli/: Cargo.toml
crates/m2p-cli/src/: main.rs
crates/m2p-core/: Cargo.toml
crates/m2p-core/src/: coord.rs  cubie.rs  lib.rs  search.rs  tools.rs  util.rs
crates/m2p-wasm/: Cargo.toml
crates/m2p-wasm/src/: lib.rs
fixtures/: java_100.tsv  java_2000.tsv  java_500.tsv
pkg/: app.js  index.html  m2p_wasm.d.ts  m2p_wasm.js  m2p_wasm_bg.wasm  m2p_wasm_bg.wasm.d.ts  package.json  smoke.html
